# Bukhtagram

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
Logger/include/: Logger.hpp
Logger/src/: Logger.cpp
Messenger-Client/: main.cpp
Messenger-Client/Client/: CMakeLists.txt
Messenger-Client/Client/Controllers/: CMakeLists.txt
Messenger-Client/Client/Controllers/ClientController/include/: ClientController.hpp  IClientController.hpp
Messenger-Client/Client/Controllers/ClientController/src/: ClientController.cpp
Messenger-Client/Client/Models/: CMakeLists.txt
Messenger-Client/Client/Models/ClientModel/include/: ClientModel.hpp  IClientModel.hpp
Messenger-Client/Client/Models/ClientModel/src/: ClientModel.cpp
Messenger-Client/Client/Views/ClientView/include/: ClientView.hpp
Messenger-Client/Client/Views/ClientView/src/: ClientView.cpp
Messenger-Server/: main.cpp
Messenger-Server/Server/Controllers/ClientHandlerController/include/: ClientHandlerController.hpp  IClientHandlerController.hpp
Messenger-Server/Server/Controllers/ClientHandlerController/src/: ClientHandlerController.cpp
Messenger-Server/Server/Controllers/ServerController/include/: IServerController.hpp  ServerController.hpp
Messenger-Server/Server/Controllers/ServerController/src/: ServerController.cpp
Messenger-Server/Server/Models/ClientHandlerModel/include/: ClientHandlerModel.hpp  IClientHandlerModel.hpp
Messenger-Server/Server/Models/ClientHandlerModel/src/: ClientHandlerModel.cpp  IClientHandlerModel.cpp
Messenger-Server/Server/Models/ServerModel/include/: IServerModel.hpp  ServerModel.hpp
Messenger-Server/Server/Models/ServerModel/src/: ServerModel.cpp
